# dioxus-heroicons

./: Cargo.toml
src/: lib.rs
