[package]
name = "dioxus-heroicons"
version = "0.5.0"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Dioxus components for heroicons (https://heroicons.com/)"
repository = "https://github.com/houseabsolute/dioxus-heroicons"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["html"] }

[dev-dependencies]
# Workaround for https://github.com/DioxusLabs/dioxus/issues/3053
futures-channel = "0.3.29"
dioxus-ssr = "0.6.2"
html-compare-rs = "0.3.0"

[workspace]
members = ["gen"]

[workspace.metadata.release]
allow-branch = ["master"]
